--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,7 @@ dependencies {
 
     //二维码
     implementation 'com.google.zxing:core:3.3.0'
+
+    //权限管理
+   // implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
 }
