--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,7 +33,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    //刷新
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0-alpha-27'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0-alpha-27'
 
     // 网络请求+注解
     implementation 'org.xutils:xutils:3.8.3'
@@ -44,5 +47,5 @@ dependencies {
     implementation 'com.google.zxing:core:3.3.0'
 
     //权限管理
-   // implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+    // implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
 }
