增加极光通知

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,6 +11,18 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
+        ndk {
+            //选择要添加的对应cpu类型的.so库。
+            abiFilters 'armeabi', 'armeabi-v7a', 'armeabi-v8a'
+            // 还可以添加 'x86', 'x86_64', 'mips', 'mips64'
+        }
+
+        manifestPlaceholders = [
+                JPUSH_PKGNAME: applicationId,
+                JPUSH_APPKEY : "9ee06fbb06322164a3171fa1", //JPush上注册的包名对应的appkey.
+                JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
+        ]
     }
     buildTypes {
         release {
@@ -48,4 +60,9 @@ dependencies {
 
     //权限管理
     // implementation 'com.github.tbruyelle:rxpermissions:0.10.2'
+
+    //极光推送+im
+    implementation 'cn.jiguang.sdk:jmessage:2.9.0'
+    // 此处以JMessage 2.9.0 版本为例。
+    implementation 'cn.jiguang.sdk:jcore:2.0.0'
 }
